# redcord-rust

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  test.rs
src/config/: directories.rs  mod.rs  setup.rs
src/reddit/: apirequest.rs  mod.rs
testing/: reddit.json
