[package]
name = "redcord"
version = "1.0.0"
authors = ["Seth Flynn <sethaflynn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
serde_json = "1.0.58"
ureq = { version = "1.5.1", features = ["json"] }
