[package]
name = "redcord"
version = "2.0.1"
authors = ["Seth Flynn <sethaflynn@gmail.com>"]
edition = "2018"
description = "a Discord Bot that fetches data from Reddit"
readme = "README.md"
repository = "https://github.com/getchoo/redcord"
license = "MIT"
keywords = ["discord", "bot", "reddit", "api"]
categories = ["api-bindings", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
discord = { git = "https://github.com/SpaceManiac/discord-rs.git", tag = "v0.9.0" }
futures = "0.3.8"
serde_json = "1.0.61"
ureq = { version = "1.5.4", features = ["json"] }
